Remove unneeded <math-tex> wrapper

--- a/src/math-tex.html
+++ b/src/math-tex.html
@@ -1,14 +1,12 @@
-<math-tex>
+<template>
 	<!--
-	Note: whitespace is stripped from this file at build time, to prevent it from
-	showing up in parent elements that have `white-space: pre`, etc.
+		Note: whitespace is stripped from this file at build time, to prevent it
+		from showing up in parent elements that have `white-space: pre`, etc.
 	-->
-	<template>
-		<style>
-			@import url(../bower_components/katex/build/katex.min.css);
-		</style>
-		<span><!-- This is where the magic happens! --></span>
-	</template>
-</math-tex>
+	<style>
+		@import url(../bower_components/katex/build/katex.min.css);
+	</style>
+	<span><!-- This is where the magic happens! --></span>
+</template>
 <script src="../bower_components/katex/build/katex.min.js"></script>
 <script src="math-tex.js"></script>
